# Motor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example/: CMakeLists.txt
example/assets/: grass.material
example/assets/models/: plane.gltf
example/assets/models/camera/: cam.gltf
example/assets/models/character/: character.gltf
example/assets/models/rock/: namaqualand_cliff_02_4k.gltf
example/assets/models/table/: round_wooden_table_02_4k.gltf
example/include/: OrbitCamera.h  PlayerController.h
example/src/: OrbitCamera.cpp  PlayerController.cpp  main.cpp
include/: Motor.h  SkyboxCubeData.h
include/assets/: Animation.h  Asset.h  AssetManager.h  BenzinAssimpAdapter.h  BenzinLoader.h  Material.h  Mesh.h  Model.h  ModelInstance.h  Shader.h  ShaderSource.h  Texture.h
include/assets/loaders/: AssetLoader.h  MaterialLoader.h  ModelLoader.h  ShaderLoader.h  TextureLoader.h
include/components/: Animator.h  Component.h
include/core/: InputManager.h  LightNode.h  ModelNode.h  Scene.h  SceneNode.h  ShaderInstance.h  Time.h
include/motor/assets/: AssetManager.h  BenzinAssimpAdapter.h  Material.h  Mesh.h  ModelInstance.h  Shader.h
include/motor/assets/loaders/: AssetLoader.h  MaterialLoader.h  ModelLoader.h  ShaderLoader.h  ShaderSourceLoader.h
include/motor/components/: Animator.h  FreeCam.h
include/motor/core/: CameraNode.h  InputManager.h  ModelNode.h  Scene.h  SceneNode.h  ShaderInstance.h
include/motor/rendering/: GPUResourceManager.h  IRenderer.h  OpenGLRenderer.h  RenderCommand.h  Window.h
include/motor/rendering/pipeline/: DefaultPipeline.h  RenderPipeline.h
include/motor/rendering/renderpass/: ForwardRenderPass.h  FullscreenPass.h  RenderPass.h
include/motor/shaders/: BrightThresholdShader.h  CompositionShader.h  DefaultShader.h  SkyboxShader.h
include/rendering/: GPUMesh.h  GPUResource.h  GPUResourceManager.h  GPUShader.h  GPUTexture.h  IRenderer.h  OpenGLRenderer.h  RenderCommand.h  RenderPassResourceRegistry.h  WindowManager.h
include/rendering/renderpass/: CompositionPass.h  ForwardRenderPass.h  RenderPass.h  ShaderPass.h  ShadowPass.h  SkyboxPass.h
include/shaders/: BlurShader.h  FullscreenShader.h
include/utils/: AssimpConverts.h  Logger.h  ShaderUniformHelper.h  UUIDHelper.h
src/: CMakeLists.txt  Motor.cpp
src/assets/: Animation.cpp  Asset.cpp  AssetManager.cpp  BenzinAssimpAdapater.cpp  BenzinLoader.cpp  Material.cpp  Mesh.cpp  Model.cpp  ModelInstance.cpp  Shader.cpp  ShaderSource.cpp  Texture.cpp
src/assets/loaders/: MaterialLoader.cpp  ModelLoader.cpp  ShaderLoader.cpp  ShaderSourceLoader.cpp  TextureLoader.cpp
src/components/: Animator.cpp  Component.cpp  FreeCam.cpp
src/core/: CameraNode.cpp  InputManager.cpp  LightNode.cpp  ModelNode.cpp  Scene.cpp  SceneNode.cpp  ShaderInstance.cpp  Time.cpp
src/rendering/: GPUMesh.cpp  GPUResourceManager.cpp  GPUShader.cpp  GPUTexture.cpp  OpenGLRenderer.cpp  Window.cpp  WindowManager.cpp
src/rendering/pipeline/: DefaultPipeline.cpp  RenderPipeline.cpp
src/rendering/renderpass/: CompositionPass.cpp  ForwardRenderPass.cpp  FullscreenPass.cpp  ShaderPass.cpp  ShadowPass.cpp  SkyboxPass.cpp
src/tools/: BenzinPacker.cpp
src/utils/: Logger.cpp
